--- a/hugo.yaml
+++ b/hugo.yaml
@@ -1,6 +1,7 @@
 baseURL: https://example.docsy.dev
 title: Goldydocs
-
+relativeURLs: true
+canonifyURLs: true
 # cSpell:ignore goldmark github hugo readingtime docsy subdir lastmod pygments linenos catmullrom norsk gu
 
 # Language settings
