--- a/hugo-disabled.toml
+++ b/hugo-disabled.toml
@@ -1,5 +1,7 @@
 baseURL = "https://example.docsy.dev/"
 title = "Goldydocs"
+relativeURLs = true
+canonifyURLs = true
 
 # Language settings
 contentDir = "content/en"
